Tweak logic and tests.  Tighten up the logic for detecting criteria-based stratifiers.