@@ -1,5 +1,6 @@
 package org.opencds.cqf.fhir.cr.measure.common;
 
+import jakarta.annotation.Nullable;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
@@ -9,7 +10,29 @@ import java.util.stream.StreamSupport;
 // LUKETODO:  javadoc
 public class StratifierUtils {
 
-    public static boolean isCriteriaBasedStratifier(GroupDef groupDef, Object expressionValue) {
+    // LUKETODO:  consider stratifier components?
+    public static boolean isCriteriaBasedStratifierFromMeasureDefBuilder(
+            GroupDef groupDef, StratifierDef stratifierDef) {
+        var resultClasses = extractClassesFromSingleOrListResult(stratifierDef.getResultType());
+        var groupPopulationBasisCode = groupDef.getPopulationBasis().code();
+
+        // types of stratifiers
+        // 1. path-based stratifier (FHIR path expression) >>> use the resource type of the population basis
+        // 2. value-based stratifier >>> based on the values returned from that expression  ex age of the patient at
+        // the
+        // end of the measurement period   break down into stratums per value
+        // 3. criteria stratifier NOT implement >> mix of the previous 2
+
+        // LUKETODO: think about how to refine this:
+        // LUKETODO: comment about component stratifiers
+
+        return resultClasses.stream()
+                .map(Class::getSimpleName)
+                .anyMatch(simpleName -> simpleName.equals(groupPopulationBasisCode));
+    }
+
+    public static boolean isCriteriaBasedStratifierFromMeasureEvaluation(
+            GroupDef groupDef, @Nullable Object expressionValue) {
         var resultClasses = extractClassesFromSingleOrListResult(expressionValue);
         var groupPopulationBasisCode = groupDef.getPopulationBasis().code();
 
@@ -33,8 +56,12 @@ public class StratifierUtils {
             return Collections.emptyList();
         }
 
+        if (result instanceof Class<?> clazz) {
+            return List.of(clazz);
+        }
+
         if (!(result instanceof Iterable<?> iterable)) {
-            return Collections.singletonList(result.getClass());
+            return List.of(result.getClass());
         }
 
         // Need to this to return List<Class<?>> and get rid of Sonar warnings.
